--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -59,6 +59,7 @@
         android:layout_height="50dp"
         android:layout_margin="16dp"
         android:text="@string/check_feasibility"
+        android:background="@color/colorAccent"
         android:layout_alignParentBottom="true" />
 </RelativeLayout>
 
